fixed top-blog grid gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,147 +1,158 @@
-/* Google fonts */
+/* Poppins Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-
-/* Common Styles or Utilities */
+/* Utilities or Common Styles */
 body{
+    background-color: #F3F1FF;
     font-family: 'Poppins', sans-serif;
-    background-color: #F3F1FF
-    ;
 }
 main{
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
 }
 .container{
-    background-color: #FFFFFF;
     width: 870px;
+    /* height: 679px; */
+    background-color: #FFFFFF;
+    border-radius: 5px;
     padding: 30px;
     margin-top: 21px;
-    border-radius: 5px;
 }
 hr{
     border: 1px solid #D1D1D1;
     margin-bottom: 27px;
 }
-/* Top Players style */
-.top-players{
-    margin-bottom: 30px;
-}
-.section-title{
-    color: #562EFF;
+/* Top Players Style */
+.player-title{
     font-size: 24px;
+    color: #562EFF;
+    margin-top: 3px;
+    margin-bottom: 40px;
 }
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 30px;
+    margin-bottom: 30px;
 }
 .player{
     display: flex;
     align-items: center;
 }
 .player img{
-    height: 56px;
     width: 56px;
+    height: 56px;
 }
-.player-name{
+.player h3{
     margin-left: 16px;
-    margin-top: 3px;
     font-size: 18px;
 }
-/* Top blogs style */
-.blogs{
+/* Top Blog */
+.top-blog{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2,1fr);
     grid-row-gap: 26px;
+    grid-column-gap: 79px;
+}
+.blog-title{
+    font-size: 24px;
+    color: #562EFF;
 }
 .blog{
     display: flex;
+    /* align-items: center; */
 }
 .blog .blog-thumbnail img{
     width: 177px;
     height: 117px;
 }
-.blog-info{
+.blog .blog-details{
     margin-left: 16px;
 }
-.blog-titile{
+.blog-details h3{
     font-size: 20px;
+    margin-bottom: 6px;
+    margin-top: 0;
 }
-.blog-author{
+.blog-details .blog-author{
     color: #9F9F9F;
     font-size: 16px;
+    margin-top: 0;
 }
-.blog-author a{
+.blog-details .blog-author a{
+    color: #562EFF;
     text-decoration: none;
+}
+/* Latest Course */
+.latest-title{
+    font-size: 24px;
     color: #562EFF;
 }
-/*------------------
-     Course Style
- -------------------*/
- .courses{
-     display: grid;
-     grid-template-columns: repeat(3, 1fr);
-     grid-column-gap: 24px;
- }
- .course{
-     width: 253px;
-     height: 270px;
- }
- .course-banner img{
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 53px;
+}
+.course-thumbnail img{
     width: 224px;
     height: 104px;
- }
- .course-info{
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
- }
- .fa-star{
-     font-size: 12px;
- }
- .fa-star.filled{
-     color: #FFC014;
- }
- .fa-star.empty{
-     color: #AEAEAE;
- }
- .course-info .rating{
-     color: #A2A2A2;
- }
- .course-duration{
-     width: 95px;
-     background-color: #FFE4E8;
-     border-radius: 15px;
-     margin-right: 25px;
- }
- .course-duration .fa-clock{
-     padding-left: 7px;
- }
-
- /*-----------------
-     Media Queries 
---------------------*/
-/* Mobile Devices */
+}
+.course-details h3{
+    font-size: 20px;
+}
+.course-details p{
+    color: #ED6B4F;
+}
+.course-info{
+    display: flex;
+    justify-content: space-between;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #A2A2A2;
+}
+.rating{
+    color: #A2A2A2;
+}
+.course-duration{
+    color: #ED6B4F;
+    background-color: #FFE4E8;
+    border-radius: 15px;
+    padding: 0 4px;
+    margin-right: 20px;
+}
+/*---------------------
+     Responsiveness 
+-----------------------*/
+/* Responsive for mobile device */
 @media only screen and (max-width:688px) {
     .container{
         width: 100%;
     }
-    .players, .blogs, .courses{
-        grid-template-columns: repeat(1, 1fr);
+    .players, .top-blog, .courses{
+        grid-template-columns: repeat(1,1fr);
     }
-    .player, .blog{
+    .player{
         flex-direction: column;
     }
-   
 }
-/* Tabled Devices */
-@media only screen and (min-width:688px) and (max-width:992px) {
+/* Responsive for tablet device */
+@media only screen and (min-width:688px) and (max-width:992px){
     .container{
         width: 100%;
     }
     .players, .courses{
         grid-template-columns: repeat(2, 1fr);
-        
+    }
+    .top-blog{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .courses{
+        grid-row-gap: 30px;
+    }
+    .course-details{
+        margin-right: 90px;
     }
 }
